objects/RIC_Amb_Contact_Consommateur__c.object
<CustomObject>
    <description>RIC_AMB : This object gathers all data regarding Contacts/Consumers</description>
    <fields>
        <fullName>RIC_Amb_Contact_Adresse_client__c</fullName>
        <label>Adresse client</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RIC_Amb_Contact_Code_Postal__c</fullName>
        <label>Code Postal</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Amb_Contact_Ville__c</fullName>
        <label>Ville</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Amb_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>RIC_Amb_Nom_de_l_organisation__c</fullName>
        <label>Nom de l&apos;organisation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Amb_Nom_du_contact__c</fullName>
        <label>Nom du contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Amb_Prenom_du_contact__c</fullName>
        <label>Prénom du contact</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Amb_Role__c</fullName>
        <label>Rôle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gérant</fullName>
                </value>
                <value>
                    <fullName>Barman</fullName>
                </value>
                <value>
                    <fullName>Acheteur</fullName>
                </value>
                <value>
                    <fullName>Conso</fullName>
                </value>
                <value>
                    <fullName>BDE</fullName>
                </value>
                <value>
                    <fullName>Presse-Média</fullName>
                </value>
                <value>
                    <fullName>RP</fullName>
                </value>
                <value>
                    <fullName>Agence</fullName>
                </value>
                <value>
                    <fullName>Autre</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RIC_Amb_Telephone__c</fullName>
        <label>Téléphone</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Amb_Type_de_Consommateur__c</fullName>
        <label>Type de Consommateur</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Jeunes Festifs</fullName>
                </value>
                <value>
                    <fullName>Rose</fullName>
                </value>
                <value>
                    <fullName>Bros</fullName>
                </value>
                <value>
                    <fullName>Ucm</fullName>
                </value>
                <value>
                    <fullName>Lads</fullName>
                </value>
                <value>
                    <fullName>Gents</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RIC_Amb_Type_de_Contact__c</fullName>
        <label>Type de Contact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consommateur</fullName>
                </value>
                <value>
                    <fullName>CHR</fullName>
                </value>
                <value>
                    <fullName>Entreprise</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Association</fullName>
                </value>
                <value>
                    <fullName>Société événementiel</fullName>
                </value>
                <value>
                    <fullName>Autres</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Contact - Consommateur</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RIC_Amb_Nom_de_l_organisation__c</columns>
        <columns>RIC_Amb_Contact_Adresse_client__c</columns>
        <columns>RIC_Amb_Contact_Ville__c</columns>
        <columns>RIC_Amb_Contact_Code_Postal__c</columns>
        <columns>RIC_Amb_Email__c</columns>
        <columns>RIC_Amb_Telephone__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Full Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contacts - Consommateurs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>